--- a/src/main/resources/templates/instructorDashboard/fragments/enrollmentDetailModalContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/enrollmentDetailModalContent.html
@@ -77,7 +77,7 @@
                         </li>
                         <li class="list-group-item d-flex justify-content-between">
                             <span class="fw-semibold">Progress:</span>
-                            <span th:text="${enrollment.progress + '%'}">0%</span>
+                            <span th:text="${enrollment.progress + '%'}"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between">
                             <span class="fw-semibold">Status:</span>
