--- a/src/main/resources/templates/instructorDashboard/fragments/ordersTableRowContent.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/ordersTableRowContent.html
@@ -1,4 +1,4 @@
-<div th:fragment="ordersTableRowContent">
+<th:block th:fragment="ordersTableRowContent">
     <tr th:each="order : ${orders}">
         <td th:text="${order.orderId} ?: 'N/A'"></td>
         <td>
@@ -14,13 +14,13 @@
                title="View"><i class="fas fa-eye"></i></a>
         </td>
     </tr>
-</div>
+</th:block>
 
 <div th:fragment="ordersPagination" class="d-sm-flex justify-content-sm-between align-items-sm-center mt-2">
     <div class="mb-0 text-center text-sm-start">
         <p class="mb-0 text-center text-sm-start" th:if="${totalItems > 0}">
-            Showing <span th:text="${currentPage * 10 + 1}">1</span> to
-            <span th:text="${(currentPage * 10) + 10 > totalItems ? totalItems : (currentPage * 10) + 10}">10</span> of
+            Showing <span th:text="${currentPage * pageSize + 1}">1</span> to
+            <span th:text="${(currentPage * pageSize) + pageSize > totalItems ? totalItems : (currentPage * pageSize) + pageSize}">10</span> of
             <span th:text="${totalItems}">20</span> entries
         </p>
         <p class="mb-0 text-center text-sm-start" th:if="${totalItems == 0}">
