--- a/src/main/resources/templates/instructorDashboard/fragments/topbarUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/topbarUpdate.html
@@ -86,21 +86,6 @@
                   <a th:href="@{/instructor/notifications}" class="stretched-link">View all notifications</a>
                 </div>
               </div>
-            <div class="dropdown-menu dropdown-animation dropdown-menu-end dropdown-menu-size-md p-0 shadow-lg border-0" style="width:220px;min-width:220px;max-width:220px;border:1px solid #ddd;">
-                <div class="card bg-transparent">
-                    <div class="card-header bg-transparent border-bottom py-4 d-flex justify-content-between align-items-center">
-                        <h6 class="m-0">Unread Notifications <span id="instructorNotificationCount" class="badge bg-danger bg-opacity-10 text-danger ms-2">0 new</span></h6>
-                    </div>
-                    <div class="card-body p-0">
-                        <ul id="instructorNotificationList" class="list-group list-unstyled list-group-flush">
-                            <!-- Notifications will be loaded here -->
-                        </ul>
-                    </div>
-                    <!-- Button -->
-                    <div class="card-footer bg-transparent border-0 py-3 text-center position-relative" style="padding-top:0;">
-                        <a th:href="@{/instructor/notifications}" class="stretched-link">View all notifications</a>
-                    </div>
-                </div>
             </div>
             <!-- Notification dropdown menu END -->
           </li>
@@ -147,7 +132,7 @@
                 <hr class="dropdown-divider">
               </li>
               <!-- Links -->
-              <li><a class="dropdown-item" th:href="@{/home}"><i class="bi bi-gear fa-fw me-1"></i>DashBoard</a></li>
+              <li><a class="dropdown-item" th:href="@{/home}"><i class="bi bi-gear fa-fw me-1"></i>Go to Home</a></li>
               <li><a class="dropdown-item" th:href="@{/instructor/profile}"><i class="fas fa-fw fa-user me-1"></i>View Profile</a>
               </li>
               <li><a class="dropdown-item bg-danger-soft-hover" data-bs-toggle="modal" data-bs-target="#logoutModal"><i
